--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -10,3 +10,5 @@ jobs:
         with: 
           node-version: '14'
       - run: node index.js
+      - name: aws configuration
+        run: aws configure list
