--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -10,5 +10,12 @@ jobs:
         with: 
           node-version: '14'
       - run: node index.js
+      - name: Set vars
+        run: |
+          echo "LAMBDA_FUNCTION_NAME=cronjobsExecution" >> $GITHUB_ENV
+          echo "AWS_DEFAULT_REGION=us-east-1" >> $GITHUB_ENV
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+          echo "S3_BUCKET=mybucket991821" >> $GITHUB_ENV
       - name: aws configuration
         run: aws configure list
